==> wbasser/SoftwareLibraries/HAL/Atmel/AVR8/GPIO/Core/Trunk/Gpio.c <==
#include "GPIO/Gpio.h"
  #define NUM_PCIRQ_BLKS  1
  #define NUM_PCIRQ_BLKS  2
  #define NUM_PCIRQ_BLKS  4
  #define NUM_PCIRQ_BLKS  4
#define GPIOCTL_SIZE    sizeof( GPIOCTL )
#define PINIRQMAP_SIZE    sizeof( PINIRQMAP )
#define EXTIRQMAP_SIZE    sizeof( EXTIRQMAP )

void Gpio_Initialize( void )
{
  GPIODEF     tDef;
  GPIOGRPDEF  tGrpDef;
  PGPIOCTL    ptCtl;
  U8          nMask, nTemp, nIdx;

  // clear the IRQ pin maps
  for ( nTemp = 0; nTemp < NUM_PCIRQ_BLKS; nTemp++ )
  {
    // for each bit
    for ( nMask = 0; nMask < 8; nMask++ )
    {
      // set an illegal pin
      atPinIrqMaps[ nTemp ].aePins[ nMask ] = GPIO_PIN_ENUM_ILLEGAL;
    }

    // reset the external IRQ maps also
    atExtIrqMaps[ nTemp ].ePin = GPIO_PIN_ENUM_ILLEGAL;
  }

  // for each list in the list
  for( nIdx = 0; nIdx < GPIO_PIN_ENUM_MAX; nIdx++ )
  {
    // get a pointer to the definition structure
    memcpy_P( &tDef, &atGpioPinDefs[ nIdx ], GPIODEF_SIZE );
    ptCtl = &atUserCtls[ nIdx ];

    // get the registers
    GetRegisters(( GPIOPORT )tDef.ePort, ptCtl );
    
    // set the mask
    ptCtl->nMask = BIT( tDef.nPin );
    
    // determine the mode
    switch( tDef.eDir )
    {
      case GPIO_DIR_OUT :
        // set the initial state
        nMask = ( tDef.tFlags.bInitialState ^ tDef.tFlags.bInvert ) ? ptCtl->nMask : 0;
        if ( nMask != 0 )
        {
          // set it
          *( ptCtl->pnPortReg ) |= nMask;
        }
        else
        {
          // clear it
          *( ptCtl->pnPortReg ) &= ~nMask;
        }

        // set the direction
        *( ptCtl->pnDirReg ) |= ptCtl->nMask;
        break;
        
      case GPIO_DIR_IN :
        // clear the direction
        *( ptCtl->pnDirReg ) &= ~ptCtl->nMask;
        
        // determine mode
        if ( tDef.eMode == GPIO_MODE_PULLUP )
        {
          // enable the pullup
          *( ptCtl->pnPortReg ) |= ptCtl->nMask;
        }
        break;
        
      case GPIO_DIR_IO :
        // set the direction based on initial mode
        // clear the direction
        *( ptCtl->pnDirReg ) |= ( tDef.eInitDir == GPIO_DIR_OUT ) ? ptCtl->nMask : 0;

        // determine mode
        if ( tDef.eMode == GPIO_MODE_PULLUP )
        {
          // enable the pullup
          *( ptCtl->pnPortReg ) |= ptCtl->nMask;
        }
        break;
        
      case GPIO_DIR_PINIRQ :
        // clear the direction
        *( ptCtl->pnDirReg ) &= ~ptCtl->nMask;
        
        // determine mode
        if ( tDef.eMode == GPIO_MODE_PULLUP )
        {
          // enable the pullup
          *( ptCtl->pnPortReg ) |= ptCtl->nMask;
        }
        
        // enable the interrupts
        nTemp = tDef.tIrqs.ePinIrq / 8;
        nMask = tDef.tIrqs.ePinIrq % 8;
        atPinIrqMaps[ nTemp ].aePins[ nMask ] = nIdx;
        atPinIrqMaps[ nTemp ].pnPinReg = ptCtl->pnPinReg;
        
        // set the appropriate mask register
        switch( nTemp )
        {
          #ifdef PCINT0_vect
          case 0 :
            PCMSK0 |= ( tDef.tFlags.bEnabled ) ? BIT( nMask ) : 0;
            #ifdef _AVR_IOTN84_H_
            GIMSK |= BIT( PCIE0 );
            #else
            PCICR |= BIT( PCIE0 );
            #endif // _AVR_IOTN84_H_
            // set the previous cap
            atPinIrqMaps[ nTemp ].nPrvCap = *( ptCtl->pnPinReg ) & PCMSK0;
            break;
          #endif // PCINT0_vect
                      
          #ifdef PCINT1_vect
          case 1 :
            PCMSK1 |= ( tDef.tFlags.bEnabled ) ? BIT( nMask ) : 0;
            #ifdef _AVR_IOTN84_H_
            GIMSK |= BIT( PCIE1 );
            #else
            PCICR |= BIT( PCIE1 );
            #endif // _AVR_IOTN84_H_
            
            // set the previous cap
            atPinIrqMaps[ nTemp ].nPrvCap = *( ptCtl->pnPinReg ) & PCMSK1;
            break;
          #endif // PCINT1_vect
                      
          #ifdef PCINT2_vect
            case 2 :
            PCMSK2 |= ( tDef.tFlags.bEnabled ) ? BIT( nMask ) : 0;
            PCICR |= BIT ( PCIE2 );
            
            // set the previous cap
            atPinIrqMaps[ nTemp ].nPrvCap = *( ptCtl->pnPinReg ) & PCMSK2;
            break;
          #endif // PCINT2_vect
                      
          #ifdef PCINT3_vect
            case 3 :
            PCMSK3 |= ( tDef.tFlags.bEnabled ) ? BIT( nMask ) : 0;
            PCICR |= BIT( PCIE3 );
            
            // set the previous cap
            atPinIrqMaps[ nTemp ].nPrvCap = *( ptCtl->pnPinReg ) & PCMSK3;
            break;
          #endif // PCINT3_vect
        }
        break;
        
      case GPIO_DIR_EXTIRQ :
        // clear the direction
        *( ptCtl->pnDirReg ) &= ~ptCtl->nMask;
        
        // determine mode
        if ( tDef.eMode == GPIO_MODE_PULLUP )
        {
          // enable the pullup
          *( ptCtl->pnPortReg ) |= ptCtl->nMask;
        }
  
        // set the maps
        atExtIrqMaps[ tDef.tIrqs.eExtIrq ].ePin = nIdx;
        atExtIrqMaps[ nTemp ].pnPinReg = ptCtl->pnPinReg;

        // determine the external interrupt request register
        switch( tDef.tIrqs.eExtIrq )
        {
          #ifdef EICRA
          case GPIO_EXTIRQ_INT0 :
            EICRA |= BITS( tDef.tEdges.eExtEdge, ISC00 );
            break;
            
          case GPIO_EXTIRQ_INT1 :
            EICRA |= BITS( tDef.tEdges.eExtEdge, ISC10 );
            break;
          
          #ifdef ISC20             
          case GPIO_EXTIRQ_INT2 :
            EICRA |= BITS( tDef.tEdges.eExtEdge, ISC20 );
            break;
          #endif // ISC20
            
          #ifdef ISC30
          case GPIO_EXTIRQ_INT3 :
            EICRA |= BITS( tDef.tEdges.eExtEdge, ISC30 );
            break;
          #endif // ISC30
          #endif // EICRA

          #ifdef EICRB            
          #ifdef ISC40
          case GPIO_EXTIRQ_INT4 :
            EICRB |= BITS( tDef.tEdges.eExtEdge, ISC40 );
            break;
          #endif // ISC40
            
          #ifdef ISC50
          case GPIO_EXTIRQ_INT5 :
            EICRB |= BITS( tDef.tEdges.eExtEdge, ISC50 );
            break;
          #endif // ISC50
            
          #ifdef ISC60
          case GPIO_EXTIRQ_INT6 :
            EICRB |= BITS( tDef.tEdges.eExtEdge, ISC60 );
            break;
          #endif // ISC60
            
          #ifdef ISC70
          case GPIO_EXTIRQ_INT7 :
            EICRB |= BITS( tDef.tEdges.eExtEdge, ISC70 );
            break;
          #endif // ISC70
          #endif // EICRB 

          default :
            break;
        }

        // enable the bit
        #ifdef EIMSK 
        EIMSK |= ( tDef.tFlags.bEnabled ) ? BIT( tDef.tIrqs.eExtIrq ) : 0;
        #else
        #endif // EIMSK
        break;
        
      default :
        break;
    }
  }

  // for each list in the list
  for( nIdx = 0; nIdx < GPIO_FNC_ENUM_MAX; nIdx++ )
  {
    // get a pointer to the definition structure
    memcpy_P( &tDef, &atGpioFncDefs[ nIdx ], GPIODEF_SIZE );
    ptCtl = &atFuncCtls[ nIdx ];

    // get the registers
    GetRegisters(( GPIOPORT )tDef.ePort, ptCtl );
    
    // set the mask
    ptCtl->nMask = BIT( tDef.nPin );
    *( ptCtl->pnDirReg ) |= ptCtl->nMask;
  }

  // for each list in the group list
  for( nIdx = 0; nIdx < GPIO_GRP_ENUM_MAX; nIdx++ )
  {
    // get a pointer to the definition structure
    memcpy_P( &tGrpDef, &atGpioGrpDefs[ nIdx ], GPIOGRPDEF_SIZE );
    ptCtl = &atGrpCtls[ nIdx ];

    // get the registers
    GetRegisters(( GPIOPORT )tGrpDef.ePort, ptCtl );

    // set the mask
    ptCtl->nMask = tGrpDef.nMask;

    // now set the direction in the port
    if ( tGrpDef.eDir == GPIO_DIR_IN )
    {
      // clear the direction pins
      *( ptCtl->pnDirReg ) &= ~ptCtl->nMask;
    }
    else
    {
      // set the direction pins
      *( ptCtl->pnDirReg ) |= ptCtl->nMask;
    }
  }
}

GPIOERR Gpio_Set( GPIOPINENUM eGpioSel, BOOL bState )
{
  GPIOERR   eError = GPIO_ERR_NONE;
  GPIODEF   tDef;
  PGPIOCTL  ptCtl;
  
  // test for valid GPIO select
  if ( eGpioSel < GPIO_PIN_ENUM_MAX )
  {
    // get a pointer to the definition structure
    memcpy_P( &tDef, &atGpioPinDefs[ eGpioSel ], GPIODEF_SIZE );
    ptCtl = &atUserCtls[ eGpioSel ];
    
    // if this pin is an input - report error
    if ( tDef.eDir == GPIO_DIR_IN )
    {
      // report the error
      eError = GPIO_ERR_ILLMODE;
    }
    else
    {
      // set the state of the pin
      if( bState ^ tDef.tFlags.bInvert )
      {
        // set the bit
        *( ptCtl->pnPortReg ) |= ptCtl->nMask;
      }
      else
      {
        // clear the bit
        *( ptCtl->pnPortReg ) &= ~ptCtl->nMask;
      }
    }
   
  }
  else
  {
    // set the error
    eError = GPIO_ERR_ILLGPIO;
  }
  
  // return the error
  return( eError );
}

GPIOERR Gpio_Get( GPIOPINENUM eGpioSel, PBOOL pbState )
{
  GPIOERR   eError = GPIO_ERR_NONE;
  GPIODEF   tDef;
  PGPIOCTL  ptCtl;
  U8        nTemp;

  // test for valid GPIO select
  if ( eGpioSel < GPIO_PIN_ENUM_MAX )
  {
    // get a pointer to the definition structure
    memcpy_P( &tDef, &atGpioPinDefs[ eGpioSel ], GPIODEF_SIZE );

    // get a pointer to the control
    ptCtl = &atUserCtls[ eGpioSel ];
    
    // get the value
    nTemp = *( ptCtl->pnPinReg ) & ptCtl->nMask;
    nTemp ^= ( tDef.tFlags.bInvert ) ? ptCtl->nMask : 0;
    *pbState = ( nTemp != 0 ) ? TRUE : FALSE;
  }
  else
  {
    // set the error
    eError = GPIO_ERR_ILLGPIO;
  }

  // return the error
  return( eError );
}

GPIOERR Gpio_Toggle( GPIOPINENUM eGpioSel )
{
  GPIOERR   eError = GPIO_ERR_NONE;
  PGPIOCTL  ptCtl;
  
  // test for valid GPIO select
  if ( eGpioSel < GPIO_PIN_ENUM_MAX )
  {
    // get a pointer to the def
    ptCtl = &atUserCtls[ eGpioSel ];

    // toggle the pin
    *( ptCtl->pnPortReg) ^= ptCtl->nMask;
  }
  else
  {
    // set the error
    eError = GPIO_ERR_ILLGPIO;
  }

  // return the error
  return( eError );
}
