==> wbasser/SoftwareLibraries/HAL/Infineon/XMC1100/GPIO/Core/Trunk/Gpio.c <==
#include "GPIO/Gpio.h"

void Gpio_Initialize( void )
{
  GPIOPINENUM   ePinIdx;
  GPIOFUNCENUM  eFncIdx;
  PGPIODEF      ptDef;
  U8            nCtlIdx;
  U8            nHysIdx;
  U32           uCtlMask;
  U32           uHysMask;
  U32           uPinMask;

  // for each list in the pin list
  for( ePinIdx = 0; ePinIdx < GPIO_PIN_ENUM_MAX; ePinIdx++ )
  {
    // get the pointer
    ptDef = ( PGPIODEF )&atGpioDefs[ ePinIdx ];

    // compute the control/hysteresis port index
    nCtlIdx = ptDef->nPin / 4;
    nHysIdx = ptDef->nPin / 8;

    // compute the control/hysteresis mask index
    uCtlMask = BITS( ptDef->eMode, ((( ptDef->nPin % 4 ) * 8 ) + PORT0_IOCR0_PC0_Pos ));
    uHysMask = BITS( ptDef->eHyst, ((( ptDef->nPin % 8 ) * 4 ) + PORT0_PHCR0_PH0_Pos ));
    uPinMask = BIT( ptDef->nPin );
    
    // determine the control port register
    switch( ptDef->ePort )
    {
      case GPIO_PORT_P0 :
        // set the mode
        switch( nCtlIdx )
        {
          case 0 :
            PORT0->IOCR0 |= uCtlMask;
            break;

          case 1 :
            PORT0->IOCR4 |= uCtlMask;
            break;

          case 2 :
            PORT0->IOCR8 |= uCtlMask;
            break;

          case 3 :
            PORT0->IOCR12 |= uCtlMask;
            break;

          default :
            break;
        }

        // set the hystersis
        switch( nHysIdx )
        {
          case 0 :
            PORT0->PHCR0 |= ( ptDef->eHyst == GPIO_HYST_LRG ) ? uHysMask : 0;
            break;

          case 1 :
            PORT0->PHCR1 |= ( ptDef->eHyst == GPIO_HYST_LRG ) ? uHysMask : 0;
            break;

          default :
            break;
        }

        // set the initial value
        if (( ptDef->eMode > GPIO_MODE_INP_NRMPU ) && ( ptDef->bInitialState ^ ptDef->bInvert ))
        {
          PORT0->OMR |= uPinMask;
        }
        break;
        
      case GPIO_PORT_P1 :
        // set the mode
        switch( nCtlIdx )
        {
          case 0 :
            PORT1->IOCR0 |= uCtlMask;
            break;

          case 1 :
            PORT1->IOCR4 |= uCtlMask;
            break;

          default :
            break;
        }

        // set the hystersis
        switch( nHysIdx )
        {
          case 0 :
            PORT1->PHCR0 |= ( ptDef->eHyst == GPIO_HYST_LRG ) ? uHysMask : 0;
            break;

          default :
            break;
        }

        // set the initial value
        if (( ptDef->eMode > GPIO_MODE_INP_NRMPU ) && ( ptDef->bInitialState ^ ptDef->bInvert ))
        {
          PORT1->OMR |= uPinMask;
        }
        break;

      case GPIO_PORT_P2 :
        // set the mode
        switch( nCtlIdx )
        {
          case 0 :
            PORT2->IOCR0 |= uCtlMask;
            break;

          case 1 :
            PORT2->IOCR4 |= uCtlMask;
            break;

          case 2 :
            PORT2->IOCR8 |= uCtlMask;
            break;

          default :
            break;
        }
        
        // set the hystersis
        switch( nHysIdx )
        {
          case 0 :
            PORT2->PHCR0 |= ( ptDef->eHyst == GPIO_HYST_LRG ) ? uHysMask : 0;
            break;

          case 1 :
            PORT2->PHCR1 |= ( ptDef->eHyst == GPIO_HYST_LRG ) ? uHysMask : 0;
            break;

          default :
            break;
        }

        // set the initial value
        if (( ptDef->eMode > GPIO_MODE_INP_NRMPU ) && ( ptDef->bInitialState ^ ptDef->bInvert ))
        {
          PORT2->OMR |= uPinMask;
        }

        // set digital mode
        PORT2->PDISC &= ~uPinMask;
        break;
        
      default :
        break;
    }
  }
  
  // for each list in the function list
  for( eFncIdx = 0; eFncIdx < GPIO_FUNC_ENUM_MAX; eFncIdx++ )
  {
    // get the pointer
    ptDef = ( PGPIODEF )&atGpioFuncs[ eFncIdx ];

    // compute the control/hysteresis port index
    nCtlIdx = ptDef->nPin / 4;

    // compute the control/hysteresis mask index
    uCtlMask = BITS( ptDef->eMode, ((( ptDef->nPin % 4 ) * 8 ) + PORT0_IOCR0_PC0_Pos ));
    uPinMask = BIT( ptDef->nPin );

    // determine the control port register
    switch( ptDef->ePort )
    {
      case GPIO_PORT_P0 :
        // set the mode
        switch( nCtlIdx )
        {
          case 0 :
            PORT0->IOCR0 |= uCtlMask;
            break;

          case 1 :
            PORT0->IOCR4 |= uCtlMask;
            break;

          case 2 :
            PORT0->IOCR8 |= uCtlMask;
            break;

          case 3 :
            PORT0->IOCR12 |= uCtlMask;
            break;

          default :
            break;
        }

        // set the hystersis
        switch( nHysIdx )
        {
          case 0 :
            PORT0->PHCR0 |= ( ptDef->eHyst == GPIO_HYST_LRG ) ? uHysMask : 0;
            break;

          case 1 :
            PORT0->PHCR1 |= ( ptDef->eHyst == GPIO_HYST_LRG ) ? uHysMask : 0;
            break;

          default :
            break;
        }

        // ensure off
        PORT0->OMR |= ( uPinMask << 16 );
        break;

      case GPIO_PORT_P1 :
        // set the mode
        switch( nCtlIdx )
        {
          case 0 :
            PORT1->IOCR0 |= uCtlMask;
            break;

          case 1 :
            PORT1->IOCR4 |= uCtlMask;
            break;

          default :
            break;
        }

        // set the hystersis
        switch( nHysIdx )
        {
          case 0 :
            PORT1->PHCR0 |= ( ptDef->eHyst == GPIO_HYST_LRG ) ? uHysMask : 0;
            break;

          default :
            break;
        }

        // ensure off
        PORT1->OMR |= ( uPinMask << 16 );
        break;

      case GPIO_PORT_P2 :
        // set the mode
        switch( nCtlIdx )
        {
          case 0 :
            PORT2->IOCR0 |= uCtlMask;
            break;

          case 1 :
            PORT2->IOCR4 |= uCtlMask;
            break;

          case 2 :
            PORT2->IOCR8 |= uCtlMask;
            break;

          default :
            break;
        }
        
        // set the hystersis
        switch( nHysIdx )
        {
          case 0 :
            PORT2->PHCR0 |= ( ptDef->eHyst == GPIO_HYST_LRG ) ? uHysMask : 0;
            break;

          case 1 :
            PORT2->PHCR1 |= ( ptDef->eHyst == GPIO_HYST_LRG ) ? uHysMask : 0;
            break;

          default :
            break;
        }

        // ensure off
        PORT2->OMR |= ( uPinMask << 16 );

        // set digital mode
        PORT2->PDISC &= ~uPinMask;
        break;

      default :
        break;
    }
  }
}

GPIOERR Gpio_Set( GPIOPINENUM eGpioSel, BOOL bState )
{
  GPIOERR   eError = GPIO_ERR_NONE;
  PGPIODEF  ptDef;
  U32       uMask;
  
  // test for valid GPIO select
  if ( eGpioSel < GPIO_PIN_ENUM_MAX )
  {
    // get the pointer
    ptDef = ( PGPIODEF )&atGpioDefs[ eGpioSel ];
    
    // check for an output pin
    if (( ptDef->eMode == GPIO_MODE_OUT_NRMPP ) || ( ptDef->eMode == GPIO_MODE_OUT_NRMOD ))
    {
      // compute the mask
      uMask = BIT( ptDef->nPin );
      if ( !( bState ^ ptDef->bInvert ))
      {
        // adjust for reset
        uMask <<= 16;
      }

      // now set the appropriate port
      switch( ptDef->ePort )
      {
        case GPIO_PORT_P0 :
          PORT0->OMR |= uMask;
          break;

        case GPIO_PORT_P1 :
          PORT1->OMR |= uMask;
          break;

        case GPIO_PORT_P2 :
          PORT2->OMR |= uMask;
          break;

        default :
          break;
      }
    }
    else
    {
      // set the error
      eError = GPIO_ERR_ILLMODE;
    }
  }
  else
  {
    // set the error
    eError = GPIO_ERR_ILLGPIO;
  }
  
  // return the error
  return( eError );
}

GPIOERR Gpio_Get( GPIOPINENUM eGpioSel, PBOOL pbState )
{
  GPIOERR   eError = GPIO_ERR_NONE;
  PGPIODEF  ptDef;
  U32       uMask;
  U32       uValue = 0;

  // test for valid GPIO select
  if ( eGpioSel <GPIO_PIN_ENUM_MAX )
  {
    // get the pointer
    ptDef = ( PGPIODEF )&atGpioDefs[ eGpioSel ];

    // compute the mask
    uMask = BIT( ptDef->nPin );

    // now set the appropriate port
    switch( ptDef->ePort )
    {
      case GPIO_PORT_P0 :
        uValue = PORT0->IN;
        break;

      case GPIO_PORT_P1 :
        uValue = PORT1->IN;
        break;

      case GPIO_PORT_P2 :
        uValue = PORT2->IN;
        break;

      default :
        break;
    }
    
    // return the state of the pin
    *pbState = ( uValue & uMask ) ? TRUE : FALSE;
    if ( ptDef->bInvert )
    {
      *pbState = !*pbState;
    }
  }
  else
  {
    // set the error
    eError = GPIO_ERR_ILLGPIO;
  }

  // return the error
  return( eError );
}

GPIOERR Gpio_Toggle( GPIOPINENUM eGpioSel )
{
  GPIOERR   eError = GPIO_ERR_NONE;
  PGPIODEF  ptDef;
  U32       uMask;
  
  // test for valid GPIO select
  if ( eGpioSel < GPIO_PIN_ENUM_MAX )
  {
    // get the pointer
    ptDef = ( PGPIODEF )&atGpioDefs[ eGpioSel ];

    // check for an output pin
    if (( ptDef->eMode == GPIO_MODE_OUT_NRMPP ) || ( ptDef->eMode == GPIO_MODE_OUT_NRMOD ))
    {
      // compute the mask
      uMask = BIT( ptDef->nPin ) | ( BIT( ptDef->nPin ) << 16 );

      // now set the appropriate port
      switch( ptDef->ePort )
      {
        case GPIO_PORT_P0 :
          PORT0->OMR |= uMask;
          break;

        case GPIO_PORT_P1 :
          PORT1->OMR |= uMask;
          break;

        case GPIO_PORT_P2 :
          PORT2->OMR |= uMask;
          break;

        default :
          break;
      }
    }
    else
    {
      // set the error
      eError = GPIO_ERR_ILLMODE;
    }
  }
  else
  {
    // set the error
    eError = GPIO_ERR_ILLGPIO;
  }

  // return the error
  return( eError );
}
